chore(ci): use container support